# pjsettings

./: .travis.yml  CMakeLists.txt  COPYING  appveyor.yml  jsoncpp.cpp  persistent.cpp  persistent.hpp  pjsettings-jsoncpp.cpp  pjsettings-jsoncpp.h  pjsettings-jsoncpp.md  pjsettings-pugixml.cpp  pjsettings-pugixml.h  pjsettings-pugixml.md  pugixml.cpp  pugixml.hpp  readme.md  types.cpp  types.hpp
tests/: CMakeLists.txt  SimpleClass.h  libpjproject.pc  pjsettings-jsoncpp.tests.cpp  pjsettings-pugixml.tests.cpp  test-config-jsoncpp.json  test-config-pugixml.xml
